@startuml

entity tenants{
	*id :PRIMARY KEY
	--
	name :VARCHAR NOT NULL
	type :VARCHAR NOT NULL
	city :VARCHAR NOT NULL
        created_at :DATE
        updated_at :DATE
}

note right of tenants
  Armazena informações dos clientes do sistema.
  Pode representar hospitais, prefeituras ou outras instituições.
  Contém dados essenciais para identificação e filtragem por tenant.
end note


entity users{
	*id :PRIMARY KEY
	--
	tenant_id :FOREIGN KEY NOT NULL
	name :VARCHAR NOT NULL
	email :VARCHAR NOT NULL
	password :VARCHAR NOT NULL
	role :VARCHAR
	created_at :DATE
	updated_at :DATE
}

note right of users
  Armazena informações dos usuários do sistema.
  role define o tipo de usuário (ex: receptionist, nurse, doctor).
end note

entity patients{
	*id :PRIMARY KEY
	--
	tenant_id :FOREIGN KEY NOT NULL
	name :VARCHAR
	suggested_priority :VARCHAR
	priority: VARCHAR
	created_at :DATE
	updated_at :DATE	
}

note left of patients
  Armazena informações dos pacientes.
  suggested_priority é a prioridade sugerida automaticamente.
  priority é a prioridade final definida pelo responsável pela triagem.
end note

entity triages_queue{
    *id :PRIMARY KEY
	--
	user_id :FOREIGN KEY
	patient_id :FOREIGN KEY NOT NULL
	tenant_id :FOREIGN KEY NOT NULL
	status :VARCHAR NOT NULL
	created_at :DATE
	updated_at :DATE
}

note right of triages_queue
  Fila de triagem de pacientes.
  status varia entre WAITING, IN_PROGRESS,  DONE
end note

entity priorities_queue{
	*id :PRIMARY KEY
	--
	patient_id :FOREIGN KEY
	user_id :FOREIGN KEY NOT NULL
	tenant_id :FOREIGN KEY NOT NULL
	status :VARCHAR NOT NULL
 	created_at :DATE
	updated_at :DATE
}

note left of priorities_queue
  Fila de atendimento.
  status varia entre WAITING, IN_PROGRESS,  DONE
end note

users ||--|{ triages_queue
patients ||--|{ triages_queue

users ||--|{ priorities_queue
patients ||--|{ priorities_queue

tenants ||--o{ users
tenants ||--o{ patients
tenants ||--o{ priorities_queue
tenants ||--o{ triages_queue
@enduml

